--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <!--ページに表示されない情報(サイトの裏側の設定)-->
     <meta charset="utf-8">
     <title>どいしゅん</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <!--ブラウザのタブのタイトルを指定-->
 </head>
 
 <body>
     <div>
         <h1>キャベツの千切り</h1>
-        <p>キャベツの千切り用のピーラーの早さに感銘を受け、毎日半玉千切りして食べています</p>
+        <p>キャベツの千切り専用ピーラーの速さに感銘を受け、毎日半玉千切りして食べています</p>
     </div>
 </body>
 
